# estimate_pc

./: .gitignore  Caddyfile  LICENSE  README.md  crontab  docker-compose.yml  example.env
.github/workflows/: build-docker-images-actions.yml
docker-entrypoint-initdb.d/: create_tables.sql
example/same_url/: Caddyfile  example.env
example/separated_url/: example.env  react_app_env.json
initdb.d/: create_tables.sql
kakaku_api/: .env_example  Cargo.toml  Dockerfile
kakaku_api/src/: db.rs  lib.rs  main.rs  search_error.rs  short_url.rs
kakaku_api/src/models/: case.rs  case_support_form_factor.rs  cpu.rs  cpu_cooler.rs  cpu_cooler_socket.rs  gpu.rs  hdd.rs  memory.rs  motherboard.rs  power_supply.rs  ssd.rs
kakaku_api/src/search/: case.rs  cpu.rs  cpu_cooler.rs  gpu.rs  hdd.rs  memory.rs  mod.rs  motherboard.rs  power_supply.rs  search.rs  ssd.rs
kakaku_database/: Cargo.toml  Dockerfile  docker-entrypoint.sh
kakaku_database/scraping_kakaku/: DBModels.py  genrecode.csv  main.py  requirements.txt
kakaku_database/src/: data_json.rs  lib.rs  main.rs
kakaku_database/src/models/: case.rs  case_support_form_factor.rs  cpu.rs  cpu_cooler.rs  cpu_cooler_socket.rs  gpu.rs  hdd.rs  memory.rs  mod.rs  motherboard.rs  power_supply.rs  prelude.rs  ssd.rs
kakaku_front/: Caddyfile  Dockerfile  package-lock.json  package.json  tsconfig.client.json  tsconfig.server.json
kakaku_front/config/: webpack.config.client.js  webpack.config.server.js
kakaku_front/public/: index.html  index.php
kakaku_front/server/: index.tsx
kakaku_front/src/: App.tsx  env.ts  index.tsx
(+42 files in other folders)
