[package]
name = "kakaku_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = { version = "1.21.2", features = ["full"] }
dotenvy = "0.15"
sea-orm =  { version = "0.10.1", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }
log = "0.4.17"
serde_json = "1.0"
serde = "1.0.147"
tower = { version = "0.4.13", features = ["limit", "buffer"]}
thiserror = "1.0.37"
anyhow = "1.0.66"
axum-macros = "0.2.3"
tower-http = { version = "0.3.4", features = ["cors"]}
http = "0.2.8"
serde_qs = "0.11.0"
url = "2.3.1"
reqwest = "0.11.14"
