[package]
name = "kakaku_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
sea-orm =  { version = "0.10.1", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }
tokio = { version = "1.21.2", features = ["full"] }
serde_json = "1.0"
serde = "1.0.147"
chrono = "0.4.22"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
log = "0.4.17"
pyo3 = { version = "0.17.2", features = ["auto-initialize"]}
